@@ -13,4 +13,5 @@ void _assert(const char *msg, const char *file, int line)
   /* Assertion failed at foo.c line 45: x<y */
   fprintf(stderr, "Assertion failed at %s line %d: %s\n", file, line, msg);
   raise(SIGABRT);
+  for(;;); /* eliminate warning by mingw */
 }
